[package]
name = "impossible-tic-tac-toe"
description = "A game of tic-tac-toe where you cannot win"
repository = "https://github.com/simeg/impossible-tic-tac-toe"
version = "0.1.0"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"] }
serde = "1.0.59"
serde_derive = "1.0.59"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
